# diagnostics-NCB_Guys

./: README.md  analysis_plan.md  on_the_project.md  pyproject.toml  pytest.ini  requirements.txt  test_requirements.txt
data/: .gitignore  data_hashes.txt
data/group-00/: hash_list.txt
findoutlie/: __init__.py  detectors.py  metrics.py  outfind.py  spm_funcs.py
findoutlie/tests/: get_global_signals.m  test_detectors.py  test_dvars.py  test_spm_funcs.py
scripts/: find_outliers.py  validate_data.py
solutions/: .solutions.toml  .write_dvars.sh  detectors.py  metrics.py  test_detectors.py  test_spm_funcs.py  validate_data.py  write_solutions.sh
