[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "findoutlie"
author = "The team"
author-email = "team@email"
home-page = "https://github.com/nipraxis-fall-2022/diagnostics-example"
classifiers = ["License :: OSI Approved :: BSD License",
               "Programming Language :: Python :: 3"]
description-file="README.md"
# Check against requirements.txt
requires = [
    'nibabel',
    'numpy',
    'scipy',
    'matplotlib',
]
requires-python=">=3.6"
